# DnGServerSource

./: .CMakeLists.txt.swp  .README.swp  .build.swp  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README  README.md  build  buildonly  c  clean  cmake_install.cmake  depend.mak  install  system.mak
data/: treasure.000  treasure.001  treasure.002  treasure.003  treasure.004  treasure.005  treasure.006  treasure.007  treasure.008  treasure.009
data/banned/: 0x1
data/lib/: compile  stripCR  tokenize
data/lib/quests/: BETHANY.TXT  BETHANY.TXT.tok  GARON.TXT  GARON.TXT.tok  KOLANAR.TXT  KOLANAR.TXT.tok  Q332601.TXT  Q332601.TXT.tok  Q5109_01.TXT  Q5109_01.TXT.tok  Q601301.TXT  Q601301.TXT.tok  Q604301400.TXT  Q604301400.TXT.tok  Q604301425.TXT  Q604301425.TXT.tok  Q604301430.TXT  Q604301430.TXT.tok  Q604301435.TXT  Q604301435.TXT.tok  Q604301440.TXT  Q604301440.TXT.tok  Q604301500.TXT  Q604301500.TXT.tok  Q604301525.TXT  Q604301525.TXT.tok  Q604301530.TXT  Q604301530.TXT.tok  Q604301535.TXT  Q604301535.TXT.tok  Q604301540.TXT  Q604301540.TXT.tok  Q604301545.TXT  Q604301545.TXT.tok  Q604501400.TXT  Q604501400.TXT.tok  Q604501425.TXT  Q604501425.TXT.tok  Q604501430.TXT  Q604501430.TXT.tok  (+778 more)
data/lib/talktree/: 73000.TXT  73000.TXT.tok  BETHANY.TXT  BETHANY.TXT.tok  GARON.TXT  GARON.TXT.tok  GENERAL.TXT  GENERAL.TXT.tok  KOLANAR.TXT  KOLANAR.TXT.tok  MARIAL.TXT  MARIAL.TXT.tok  NPC21150.TXT  NPC21150.TXT.tok  NPC3326.TXT  NPC3326.TXT.tok  NPC4069.TXT  NPC4069.TXT.tok  NPC5014.TXT  NPC5014.TXT.tok  NPC5024.TXT  NPC5024.TXT.tok  NPC5025.TXT  NPC5025.TXT.tok  NPC5028.TXT  NPC5028.TXT.tok  NPC5033.TXT  NPC5033.TXT.tok  NPC5035.TXT  NPC5035.TXT.tok  NPC5041.TXT  NPC5041.TXT.tok  NPC5071.TXT  NPC5071.TXT.tok  NPC5074.TXT  NPC5074.TXT.tok  NPC5075.TXT  NPC5075.TXT.tok  NPC5078.TXT  NPC5078.TXT.tok  (+411 more)
data/lib/world/: ACHREN01.WLD  ACHREN01.WLD.tok  ACHREN02.WLD  ACHREN02.WLD.tok  ACHREN03.WLD  ACHREN03.WLD.tok  ACHREN04.WLD  ACHREN04.WLD.tok  ANVIL.WLD  ANVIL.WLD.tok  ARIMATHX.WLD  ARIMATHX.WLD.tok  ARIMINT.WLD  ARIMINT.WLD.tok  ASCETS01.WLD  ASCETS01.WLD.tok  ASCETS02.WLD  ASCETS02.WLD.tok  ASCETS03.WLD  ASCETS03.WLD.tok  ASCETS04.WLD  ASCETS04.WLD.tok  ASCETS05.WLD  ASCETS05.WLD.tok  ASCETS06.WLD  ASCETS06.WLD.tok  ASCETS07.WLD  ASCETS07.WLD.tok  ASCETS08.WLD  ASCETS08.WLD.tok  ASCETS09.WLD  ASCETS09.WLD.tok  ASCETS10.WLD  ASCETS10.WLD.tok  ASCETS11.WLD  ASCETS11.WLD.tok  ASCETS12.WLD  ASCETS12.WLD.tok  ASCETS13.WLD  ASCETS13.WLD.tok  (+531 more)
data/lib/world/Invasion/: 01_INVADE_HI_Z11.WLD  01_INVADE_HI_Z12.WLD  01_INVADE_LOW_Z04.WLD  01_INVADE_LOW_Z08.WLD  01_INVADE_LOW_Z09.WLD  01_INV_ASCETS05.WLD  01_INV_ASCETS06.WLD  01_INV_ASCETS12.WLD  01_INV_ASCETS15.WLD  (+71 more)
data/lib/zones/: ACHREN_N.ZON  ACHREN_N.ZON.tok  ACHREN_S.ZON  ACHREN_S.ZON.tok  ARIMATHOR.ZON  ARIMATHOR.ZON.tok  ASCETOS.ZON  ASCETOS.ZON.tok  ASCETOSD.ZON  ASCETOSD.ZON.tok  ASCETOSDOld.ZON  ASCETOSDOld.ZON.tok  ASCETOSOld.ZON  ASCETOSOld.ZON.tok  ASGARD.ZON  ASGARD.ZON.tok  BARRENS.ZON  BARRENS.ZON.tok  BARRENSOld.ZON  BARRENSOld.ZON.tok  BLOODWOOD.ZON  BLOODWOOD.ZON.tok  BLOODWOODOld.ZON.tok  CAERFAWDRY.ZON  CAERFAWDRY.ZON.tok  CAMBRIA.ZON  CAMBRIA.ZON.tok  DESPOTHESTEMPLE.ZON  DESPOTHESTEMPLE.ZON.tok  DEVONFOREST.ZON  DEVONFOREST.ZON.tok  DEVONFORESTOld.ZON.tok  DOWNS.ZON  DOWNS.ZON.tok  DOWNSOld.ZON  DOWNSOld.ZON.tok  DREAR.ZON  DREAR.ZON.tok  DRUNE.ZON  DRUNE.ZON.tok  (+229 more)
data/riddles/: riddle01.txt  riddle02.txt  riddle03.txt  riddle04.txt  riddle05.txt  riddle06.txt  riddle07.txt  riddle08.txt  riddle09.txt  riddle10.txt  wedding.txt
datamgr/: CMakeLists.txt  Makefile  cmake_install.cmake  datamgr.conf  datamgr.cpp  datamgr.hpp  main.cpp
global/: .ipcmsg.hpp.swp  .mysql.h.swp  .new.hpp.swp  .tools.hpp.swp  .tree.hpp.swp  CMakeLists.txt  Makefile  array.cpp  array.hpp  build  cencryptionstring.cpp  cencryptionstring.hpp  cgi.cpp  cgi.hpp  cmake_install.cmake  configmgr.cpp  configmgr.hpp  counter.cpp  counter.hpp  crash.cpp  crash.hpp  cscharacter.cpp  cscharacter.hpp  csinvitem.cpp  csinvitem.hpp  datamgrdefs.hpp  debug.hpp  fatal.cpp  fatal.hpp  file.cpp  file.hpp  filemgrdefs.hpp  generator.cpp  generator.hpp  global.mak  hash.cpp  hash.hpp  html.cpp  html.hpp  ipc.cpp  (+50 more)
integrationScripts/: buildCopyRun.sh  copyBinariesToLive.sh  copyLibsToLive.sh
logs/: memoryStat.txt.10577  memoryStat.txt.10798  memoryStat.txt.11004  memoryStat.txt.11772  memoryStat.txt.12084  memoryStat.txt.12205  memoryStat.txt.12968  memoryStat.txt.13284  memoryStat.txt.13406  memoryStat.txt.13701  memoryStat.txt.13995  memoryStat.txt.14154  memoryStat.txt.14938  memoryStat.txt.1501  memoryStat.txt.15554  memoryStat.txt.15825  memoryStat.txt.16759  memoryStat.txt.17962  memoryStat.txt.17985  memoryStat.txt.19168  memoryStat.txt.19191  memoryStat.txt.20386  memoryStat.txt.20409  memoryStat.txt.21847  memoryStat.txt.2210  memoryStat.txt.22330  memoryStat.txt.23154  memoryStat.txt.23531  memoryStat.txt.24366  memoryStat.txt.24753  memoryStat.txt.25071  memoryStat.txt.25954  memoryStat.txt.26271  memoryStat.txt.27287  memoryStat.txt.28181  memoryStat.txt.29264  memoryStat.txt.29391  memoryStat.txt.30661  memoryStat.txt.31873  memoryStat.txt.3582  (+96 more)
migrationscripts/: 12_6_2017_0046-update_foe_table.sql
roommgr/: CMakeLists.txt  Makefile  RMPlayer.process_IPC_VERB_GIVE.rmplayer.cpp  actions.cpp  actions.hpp  ambushgroup.cpp  ambushgroup.hpp  audit.cpp  audit.hpp  bases.hpp  bcarry.cpp  bcarry.hpp  bcharacter.cpp  bcharacter.hpp  bconsume.cpp  bconsume.hpp  bcontain.cpp  bcontain.hpp  bcycle.cpp  bcycle.hpp  bdescribed.cpp  bdescribed.hpp  bdye.cpp  bdye.hpp  bentry.cpp  bentry.hpp  bgate.cpp  bgate.hpp  bhead.cpp  bhead.hpp  bkey.cpp  bkey.hpp  block.cpp  block.hpp  bmix.cpp  bmix.hpp  bnpc.cpp  bnpc.hpp  bopen.cpp  bopen.hpp  (+224 more)
router/: .CMake.swp  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  router.conf
tokenize/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
updates/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  build  cmake_install.cmake  main.cpp  update.conf
(+93 files in other folders)
